--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
 
       - name: Install pnpm
         uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.3.6
 
       - name: Install dependencies
         run: bun i
